Fixed some comment issues

--- a/Path planning.ipynb
+++ b/Path planning.ipynb
@@ -328,16 +328,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define assumed constraints for the above equations to apply\n",
-    "#These constraints are necessary since they were assumed to be set to these values\n",
-    "#when deriving the equations above.\n",
+    "#Define assumed constraints for the above equations to apply.\n",
+    "#These constraints are necessary since they were assumed to be set to these \n",
+    "#values when deriving the equations above.\n",
     "t0 = 0\n",
     "v0 = 0\n",
     "vf = 0\n",
     "\n",
-    "#Get the variable constraints\n",
-    "#Note the the variables should satisfy the condition that the\n",
-    "#blending time is: 0 < tb <tf/2\n",
+    "#Get the variable constraints.\n",
+    "#Note that the variables should satisfy the condition that the\n",
+    "#blending time is: 0 < tb <= tf/2\n",
     "\n",
     "tf = float(input('Enter the final time tf: '))\n",
     "q0 = float(input('Enter the initial position q0: '))\n",
